# a2a-skill

./: .coverage  .gitattributes  .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CLIENT_API.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.multi  FTS_SEARCH.md  GIT_AWARE.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  PRIORITY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROUTING.md  SKILL.md  V13_DEPLOYMENT_CHECKLIST.md  V13_QUICKREF.md  WEB_UI_README.md  a2a  a2a-spawn  a2a.py  a2a_ack.py  a2a_audit.py  a2a_client.go  a2a_client.js  a2a_client.py  a2a_client.pyi  a2a_client_async.py  a2a_client_async.pyi  a2a_client_test.go  a2a_common.py  a2a_crypto.py  a2a_fts.py  (+37 more)
completion/: AGENTS.md  a2a.bash  a2a.zsh
docs/: ADVANCED_PATTERNS.md  AGENTS.md  AUDIT.md  CLIENT_API.md  CONTRIBUTING.md  COORDINATION_ROADMAP.md  DEPLOYMENT.md  ENCRYPTION.md  FTS_SEARCH.md  GIT_AWARE.md  GO_CLIENT_API.md  GO_CLI_REFERENCE.md  GO_TESTING.md  INSTALLATION.md  INTEGRATION_GUIDE.md  MIGRATION_V12_TO_V13.md  NODE_CLIENT_API.md  OPERATIONS_GUIDE.md  PITFALLS.md  PRIORITY.md  PROJECT_STATUS.md  QUICKSTART.md  RELEASE_HIGHLIGHTS_V13.md  RELEASE_v1.3.0.md  REST_API.md  ROADMAP_V14.md  ROUTING.md  RUST_CLIENT_API.md  SECURITY_HARDENING.md  SKILL.md  TEAM_COORDINATION_SKILL.md  TEAM_ENHANCEMENT_SKILLS.md  TESTING_V13.md  TROUBLESHOOTING.md  V13_QUICKREF.md  V14_ARCHITECTURE.md  changelog-2026-05-product.md  changelog-2026-05.html  changelog.html  index.html  (+5 more)
examples/: AGENTS.md  README.md  async_task_worker.py  code_reviewer_agent.py  collision_detector.py  compliance_archival_agent.py  (+11 more)
(+119 files in other folders)
