[package]
name = "a2a"
version = "1.2.0"
edition = "2021"
authors = ["a2a team"]
description = "Agent-to-Agent (a2a) messaging library for Rust"
repository = "https://github.com/anthropics/a2a"
license = "MIT"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "task_worker"
path = "examples/task_worker.rs"

[lib]
name = "a2a"
path = "src/lib.rs"
